--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,15 +12,16 @@
     <% } %>
 <h1><script>console.log(window.location.search)</script></h1>
 <%- include ('./partials/messages') %>
+
 <div class="offer">
     <div class="offerText">
         <a href="/products">GET 50% OFF THIS MONTH ON ALL SELECTED PRODUCTS!</a>
     </div>
     <div class="offerContent">
-        <img src="/pictures/card1.png" class="offerCards" onclick="window.location.href='/products'">
-        <img src="/pictures/card2.png" class="offerCards" onclick="window.location.href='/products'">
-        <img src="/pictures/card3.png" class="offerCards" onclick="window.location.href='/products'">
-        <img src="/pictures/card4.png" class="offerCards" onclick="window.location.href='/products'">
+        <img src="../pictures/card1.png" class="offerCards" onclick="window.location.href='/products'">
+        <img src="../pictures/card2.png" class="offerCards" onclick="window.location.href='/products'">
+        <img src="../pictures/card3.png" class="offerCards" onclick="window.location.href='/products'">
+        <img src="../pictures/card4.png" class="offerCards" onclick="window.location.href='/products'">
     </div>
 </div>
 
@@ -44,22 +45,22 @@
 </div>
 
 <div class="shopImg">
-    <div class="d-flex flex-row justify-content-center">
+    <div class="shopimgDiv d-flex flex-row justify-content-center">
         <div>
-            <img src="/pictures/custom1.jpg" class="offerCards" onclick="window.location.href='/products'">
+            <img src="../pictures/custom1.jpg" class="offerCards" onclick="window.location.href='/products'">
         </div>
         <div class="d-flex flex-column justify-content-center">
             <h2 class="m-3 text-left">🤩Custom made🤩</h2>
             <h3 class="m-3 text-left">Help you celebrate even <span style="text-decoration: underline; font-size:larger">better</span>!</h3>
         </div>
     </div>
-    <div class="d-flex flex-row justify-content-center">
+    <div class="shopimgDiv d-flex flex-row justify-content-center">
         <div class="d-flex flex-column justify-content-center">
             <h2 class="m-3 text-right">⭐Special order⭐</h2>
             <h3 class="m-3 text-right">Score extra points with your loved ones!</h3>
         </div>
         <div>
-            <img src="/pictures/custom2.jpg" class="offerCards" onclick="window.location.href='/products'">
+            <img src="../pictures/custom2.jpg" class="offerCards" onclick="window.location.href='/products'">
         </div>
     </div>
 </div>
