--- a/config/style.css
+++ b/config/style.css
@@ -58,6 +58,7 @@
 .shopImg {
     background-color: aliceblue;
     border-radius: 15px!important;
+    padding: 2em 0 2em 0;
 }
 .shopImg > img {
     margin: 1em 0 1em 0;
@@ -77,15 +78,22 @@
     flex-direction: column;
     align-items: center;
 }
+.addButton{
+    transition: .3s ease;
+}
+.addButton:hover{
+    transform: scale(1.2);
+}
 .product {
     display: flex;
     align-items: center;
-    margin: 1em 1em 0 1em;
+    margin: 0.5em 1em 0 1em;
     /* background-color: rgba(85, 83, 83, 0.76); */
     height: 200px;
     width: 200px;
     transition: 1s ease;
     border-radius: 25%;
+    justify-content: center;
 }
 .product:hover{
     transform: scale(1.1);
@@ -125,7 +133,7 @@
 }
 #btfimg {
     width: auto;
-    height: 50vh;
+    height: 40vh;
 }
 #btfh2 {
     background-color: rgb(255 255 255 / 79%);
@@ -168,5 +176,17 @@
     }
     .hiddenModal{
         width: 80vw;
+    }
+    .shopimgDiv {
+        flex-direction: column!important;
+        align-items: center!important;
+        text-align: center!important;
+    }
+    .shopimgDiv> div > img {
+        height: 40vh;
+        width: auto;
+    }
+    .shopimgDiv> div > h3, .shopimgDiv> div > h2 {
+        text-align: center!important;
     }
 }
