--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -17,7 +17,7 @@
           </div>
           <% } %>
             <% if(error_msg !='' ){ %>
-              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
                 <%= error_msg %>
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -25,7 +25,7 @@
               </div>
               <% } %>
                 <% if(error !='' ){ %>
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                  <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
                     <%= error %>
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
