--- a/views/product_manager.ejs
+++ b/views/product_manager.ejs
@@ -27,13 +27,12 @@
             document.getElementById('name').value=document.getElementById('p<%= counter %>').innerHTML ;
             document.getElementById('price').value = document.getElementById('price<%= counter %>').innerHTML.replace('£','').trim();
             document.getElementById('product_id').value = document.getElementById('id<%= counter %>').innerHTML.trim();
-            document.getElementById('photo').value = '<%= data.photo %>';
             ">
             
                 <div class="product">
-                    <img src="/pictures/<%=data.photo%>" class="productPicture" id="photo<%= counter %><%= data.photo %>">
+                    <img src="../pictures/card1.png" class="productPicture">
                 </div>
-                <p id="p<%= counter %>" style="font-size: 1.4em;font-weight: bold;"><%= data.name %></p>
+                <p id="p<%= counter %>" style="font-size: 1.4em;font-weight: bold;word-break: break-word;overflow: hidden;white-space: nowrap;width: 200px;" onmouseover="this.style='font-size: 1.4em;font-weight: bold;overflow:visible;word-break: break-all;width: 200px;position:absolute;margin-top: 220px;'" onmouseleave="this.style='overflow:hidden;white-space: nowrap;width: 200px;word-break: break-word;font-size: 1.4em;font-weight: bold;'"><%= data.name %></p>
                 <div style="font-weight: bold; transform: translateY(-20px);" id="price<%= counter %>">£<%= data.price %>
                 </div>
             </div>
@@ -49,20 +48,6 @@
         <input name="product_id" id="product_id" type="text" style="text-align: center;display: none;" ><br>
         <input name="name" id="name" type="text" style="text-align: center" placeholder="name" autocomplete="off" minlength="1"><br>
         <input name="price" id="price" type="text" style="text-align: center" placeholder="price" minlength="1" onkeypress="return /[0-9.]/i.test(event.key)"  autocomplete="off"><br>
-
-        <select id="photo" name="photo" class="rounded">
-            <option value="prod(1).jpg">wheel</option>
-            <option value="prod(2).jpg">dumbell</option>
-            <option value="prod(3).jpg">spring</option>
-            <option value="prod(4).jpg">cord</option>
-            <option value="prod(5).jpg">abs tool</option>
-            <option value="prod(6).jpg">standup bench</option>
-            <option value="prod(7).jpg">sweat suit</option>
-            <option value="prod(8).jpg">dumbell pack</option>
-            <option value="prod(9).jpg">yoga mat</option>
-            <option value="prod(10).jpg">cords pack</option>
-            <option value="prod(11).jpg">all-in-one thing?</option>
-        </select>
 
         <input type="submit" value="Update" class="px-1 mt-2 btn btn-warning" formaction="product_manager1" id="product_manager1"><br>
         <input type="submit" value="Insert" class="px-1 btn btn-success" formaction="product_manager2" id="product_manager2"><br>
