--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <div class="header mt-5">
 
-    <div class="navLeft" style="white-space:nowrap">
+    <div class="navLeft" id="navLeft" style="white-space:nowrap">
         <div>
             <img src="../../pictures/logobg.png" style="max-width:120px;transform: translate(39px, 6px);position: fixed;">
         </div>
