--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,7 @@
     defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <title>Node.js & Passport Login App</title>
+  <title>CelebrationCard</title>
 </head>
 
 <!-- <body  oncontextmenu="return false;"> -->
