--- a/views/product_manager.ejs
+++ b/views/product_manager.ejs
@@ -2,14 +2,20 @@
 
 <%- include ('./partials/messages') %>
 
-<div style="text-align: center;"><button type="button" style="justify-content: center" class="px-1 mt-5 btn btn-secondary" onclick="
+<div style="text-align: center;">
+    
+<button type="button" style="justify-content: center" class="px-1 mt-5 btn btn-secondary" onclick="
     document.getElementById('product_manager1').style.display='none';
     document.getElementById('product_manager3').style.display='none';
     document.getElementById('product_manager2').style.display='block';
     document.getElementById('name').value = '';
     document.getElementById('price').value = '';
+    document.getElementById('img').value = '';
             document.getElementById('hiddenModal').classList.toggle('visible');
-    ">Insert Product</button></div>
+    ">Insert Product</button>
+    
+</div>
+
 
 
 <div class="productList card text-center">
@@ -25,12 +31,13 @@
             document.getElementById('product_manager1').style.display='block';
             document.getElementById('product_manager3').style.display='block';
             document.getElementById('name').value=document.getElementById('p<%= counter %>').innerHTML ;
+            document.getElementById('img').value=document.getElementById('img<%= counter %>').src ;
             document.getElementById('price').value = document.getElementById('price<%= counter %>').innerHTML.replace('£','').trim();
             document.getElementById('product_id').value = document.getElementById('id<%= counter %>').innerHTML.trim();
             ">
             
                 <div class="product">
-                    <img src="../pictures/card1.png" class="productPicture">
+                    <img id="img<%= counter %>" src="<%=data.img%>" class="productPicture" id>
                 </div>
                 <p id="p<%= counter %>" style="font-size: 1.4em;font-weight: bold;word-break: break-word;overflow: hidden;white-space: nowrap;width: 200px;" onmouseover="this.style='font-size: 1.4em;font-weight: bold;overflow:visible;word-break: break-all;width: 200px;position:absolute;margin-top: 220px;'" onmouseleave="this.style='overflow:hidden;white-space: nowrap;width: 200px;word-break: break-word;font-size: 1.4em;font-weight: bold;'"><%= data.name %></p>
                 <div style="font-weight: bold; transform: translateY(-20px);" id="price<%= counter %>">£<%= data.price %>
@@ -44,13 +51,18 @@
 <div class="hiddenModal" id="hiddenModal" style="visibility: hidden">
     <button type="button" id="closeShopModal"
         onclick="document.getElementById('hiddenModal').classList.toggle('visible')">X</button><br><br>
+        <form >
+            <input type="hidden" name="avatar_url" id="avatar_url" class="simple-file-upload"> -->
+        </form>
     <form method="post" style="display: flex; flex-direction: column; justify-content:center;">
         <input name="product_id" id="product_id" type="text" style="text-align: center;display: none;" ><br>
         <input name="name" id="name" type="text" style="text-align: center" placeholder="name" autocomplete="off" minlength="1"><br>
         <input name="price" id="price" type="text" style="text-align: center" placeholder="price" minlength="1" onkeypress="return /[0-9.]/i.test(event.key)"  autocomplete="off"><br>
 
-        <input type="submit" value="Update" class="px-1 mt-2 btn btn-warning" formaction="product_manager1" id="product_manager1"><br>
-        <input type="submit" value="Insert" class="px-1 btn btn-success" formaction="product_manager2" id="product_manager2"><br>
+        <input name="img" id="img" type="text" style="text-align: center" placeholder="img" autocomplete="off" minlength="1"><br>
+
+        <input type="submit" value="Update" class="px-1 mt-2 btn btn-warning" formaction="product_manager1" id="product_manager1" onmouseenter="insertLink()"><br>
+        <input type="submit" value="Insert" class="px-1 btn btn-success" formaction="product_manager2" id="product_manager2" onmouseenter="insertLink()"><br>
         <input type="submit" value="Delete" class="px-1 btn btn-danger" formaction="product_manager3" id="product_manager3"><br>
     </form>
 </div>
@@ -61,4 +73,10 @@
                 document.getElementById('hiddenModal').classList.remove('visible')
             }})
     }
+    function insertLink(){
+        var sfu = document.getElementById('avatar_url').value;
+        if(sfu.length > 2) {
+        document.getElementById('img').value = sfu;}
+    }
+    
 </script>
