--- a/views/product_manager.ejs
+++ b/views/product_manager.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 
 <%- include ('./partials/messages') %>
-
+<% if(user._id !== "") %>
 <div style="text-align: center;">
     
 <button type="button" style="justify-content: center" class="px-1 mt-5 btn btn-secondary" onclick="
