--- a/views/products.ejs
+++ b/views/products.ejs
@@ -2,25 +2,41 @@
 
 
 <%- include ('./partials/messages') %>
-
-<div class="productList card text-center">
-<% counter=1 %>
-<% products.forEach(function(data) { %>
-    <div class="productListContainer">
-        <form action="/add" method="post">
-            <input type="text" name="user" value="<%=user._id%>" hidden>
-            <input type="text" name="productName" value="<%=data.name%>" hidden>
-            <input name="qty" type="number" placeholder="1" value="1" min="1" style="text-align: center; max-width: 50px; margin: 2px 6px 0px 10px;font-size: x-large;border-radius: 25%;">
-            <button class="addButton" type="submit" onclick="addToBasket('<%=data.name%>');" style="text-align: center; margin: 2px 10px 0px 6px; padding: 6px;border: none;border-radius: 25%;font-size: x-large;">Add</button>
-        </form>
-        <div class="product"><img src="<%=data.img%>" class="productPicture"></div>
-        <p id="p<%= counter %>" style="font-size: 1.4em;font-weight: bold;word-break: break-word;overflow: hidden;white-space: nowrap;width: 200px;" onmouseenter="this.style='font-size: 1.4em;font-weight: bold;overflow:visible;word-break: break-all;width: 200px'" onmouseleave="this.style='overflow:hidden;white-space: nowrap;width: 200px;word-break: break-word;font-size: 1.4em;font-weight: bold;'"><%= data.name %></p>
-        <div style="font-weight: bold; transform: translateY(-20px);">£<%= data.price %></div>
-        <div style="display: flex; flex-direction: row;">
+<div class="d-flex flex-row">
+    <div class="productList card card-body" style="width: 258px;">
+        <div style="position: fixed;">
+            <h6>Categories</h6>
+            <li>Birthday</li>
+            <li>New Year</li>
+            <li>Easter</li>
+            <li>Christmas</li>
+            <li>For Her</li>
+            <li>For Him</li>
+            <li>🤩Custom</li>
         </div>
     </div>
-    <% counter++ } )  %>
+    <div class="productList card text-center">
+        <% counter=1 %>
+        <% products.forEach(function(data) { %>
+            <div class="productListContainer">
+                <form action="/add" method="post">
+                    <input type="text" name="user" value="<%=user._id%>" hidden>
+                    <input type="text" name="productName" value="<%=data.name%>" hidden>
+                    <input name="qty" type="number" placeholder="1" value="1" min="1" style="text-align: center; max-width: 50px; margin: 2px 6px 0px 10px;font-size: x-large;border-radius: 25%;">
+                    <button class="addButton" type="submit" onclick="addToBasket('<%=data.name%>');" style="text-align: center; margin: 2px 10px 0px 6px; padding: 6px;border: none;border-radius: 25%;font-size: x-large;">Add</button>
+                </form>
+                <div class="product"><img src="<%=data.img%>" class="productPicture"></div>
+                <p id="p<%= counter %>" style="font-size: 1.4em;font-weight: bold;word-break: break-word;overflow: hidden;white-space: nowrap;width: 200px;" onmouseenter="this.style='font-size: 1.4em;font-weight: bold;overflow:visible;word-break: break-all;width: 200px'" onmouseleave="this.style='overflow:hidden;white-space: nowrap;width: 200px;word-break: break-word;font-size: 1.4em;font-weight: bold;'"><%= data.name %></p>
+                <div style="font-weight: bold; transform: translateY(-20px);">£<%= data.price %></div>
+                <div style="display: flex; flex-direction: row;">
+                </div>
+            </div>
+            <% counter++ } )  %>
+        </div>      
+
+
 </div>
+
 
 <div class="contactDetails mt-4 mb-5">
     <a href="/" class="btn btn-secondary btn-block">GymShop</a>
