--- a/config/style.css
+++ b/config/style.css
@@ -71,6 +71,7 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    min-height: 40vh;
 }
 .productListContainer {
     max-width: 300px;
@@ -170,7 +171,7 @@
 }
 .offerCards{
     height: auto;
-    width: min(225px, 15vw);
+    width: min(225px, 50vw);
     cursor: pointer;
     transition: .5s ease;
 }
@@ -185,6 +186,9 @@
     text-align: start;
     color: rgb(197, 197, 197);
     transform: translateY(10px);
+}
+.cats >form> li {
+    list-style: none;
 }
 @media (max-width: 800px) {
     #btfimg {
@@ -221,5 +225,17 @@
     }
     .shopimgDiv> div > h3, .shopimgDiv> div > h2 {
         text-align: center!important;
+    }
+    .divCats{
+        position: initial!important;
+    }
+    .productListParent{
+        display: flex!important;
+        flex-direction: column!important;
+        align-items: center!important;
+    }
+    .offerContent{
+        flex-direction: column;
+        align-items: center!important;
     }
 }
