--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -66,6 +66,6 @@
 </div>
 
 <div class="contactDetails mt-4 mb-5">
-    <a href="/" class="btn btn-secondary btn-block">GymShop</a>
+    <a href="/dashboard" class="btn btn-secondary btn-block">CelebrationCard</a>
     <a href="/contact" class="btn btn-secondary btn-block">Contact</a>
 </div>
