--- a/views/complete.ejs
+++ b/views/complete.ejs
@@ -117,7 +117,7 @@ var total = 0.00;
         <td></td>
         <td></td>
         <td style="text-align: center;font-weight: bold;font-size:xx-large">TOTAL</td>
-        <td style="text-align: center;font-weight: bold;font-size:xx-large">£ <%= total %></td>
+        <td style="text-align: center;font-weight: bold;font-size:xx-large">£ <%= total.toFixed(2) %></td>
     </tr>
 </table>
 <div class="extraMessage card card-body d-flex" style="margin: 0 auto;text-align: center;">
