--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,13 +4,53 @@
 
 
 
-<div class="contactForm card text-center d-flex flex-column">
+<div class="contactForm text-center d-flex flex-column">
 
-    <form method="post"><br><br>
+    
+
+    <!-- <form method="post" id="CTForm"><br><br><br><br><br>
+        <h1 style="font-family: 'Great Vibes', cursive!important;    font-size: 4.5rem;">Contact Form</h1><br><br><br><br><br><br>
         <input type="text" name="name" id="" placeholder="name" <% if(user){%>value=<%=user.name%><%}%>><br>
         <input type="email" name="email" id="" placeholder="email"<% if(user){%>value=<%=user.email%><%}%>><br>
-        <textarea type="text" name="message" id="" placeholder="message" rows="4" cols="50"></textarea><br><br>
+        <textarea type="text" name="message" id="" placeholder="message" rows="4" cols="30"></textarea><br><br>
+        <input type="submit" value="Submit"><br><br>
+    </form> -->
+    <div class="container d-flex justify-content-center">
+        
+        <div class="card">
+          <div class="front">
+            <h1 style="font-family: 'Great Vibes', cursive!important;    font-size: 4.5rem;">Contact Form</h1>
+            <div class="heart"></div>
+          </div>
+          <div class="back"><img class="photo"   src="../pictures/cf.JPG"/></div>
+          <div class="rear">
+            <div class="justify">
+                
+             <form method="post" id="CTForm"><br><br><br><br><br>
+                ⭐
+        <input type="text" name="name" id="" placeholder="name" <% if(user){%>value=<%=user.name%><%}%> style="width: 230px;"><br>
+        <input type="email" name="email" id="" placeholder="email"<% if(user){%>value=<%=user.email%><%}%> style="width: 230px;"><br>
+        <textarea type="text" name="message" id="" placeholder="message" rows="4" cols="25"></textarea><br><br>
         <input type="submit" value="Submit"><br><br>
     </form>
-
+            
+        </div>
+      </div>
 </div>
+
+
+
+
+  <script>
+      
+var heart = document.querySelector('.front');
+var card = document.querySelector('.card');
+var back = document.querySelector('.back');
+heart.addEventListener( 'click', function() {
+  card.classList.toggle('is-flipped');
+});
+
+back.addEventListener( 'click', function() {
+  card.classList.toggle('is-flipped');
+});
+  </script>
