--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
 
 <div class="contactForm text-center d-flex flex-column">
     <div class="container d-flex justify-content-center">
-        <div class="card">
+        <div class="cardz">
           <div class="front">
             <h1 style="font-family: 'Great Vibes', cursive!important;    font-size: 4.5rem;">Contact Form</h1>
             <div class="heart"></div>
@@ -32,13 +32,13 @@
   <script>
       
 var heart = document.querySelector('.front');
-var card = document.querySelector('.card');
+var z = document.querySelector('.z');
 var back = document.querySelector('.back');
 heart.addEventListener( 'click', function() {
-  card.classList.toggle('is-flipped');
+  z.classList.toggle('is-flipped');
 });
 
 back.addEventListener( 'click', function() {
-  card.classList.toggle('is-flipped');
+  z.classList.toggle('is-flipped');
 });
   </script>
