--- a/config/style.css
+++ b/config/style.css
@@ -89,7 +89,6 @@
     display: flex;
     align-items: center;
     margin: 0.5em 1em 0 1em;
-    /* background-color: rgba(85, 83, 83, 0.76); */
     height: 200px;
     width: 200px;
     transition: 1s ease;
@@ -227,7 +226,7 @@
 --highlight: #ff96ca;
 }
 
-.card,
+.cardz,
 .envelope,
 .back,
 .front,
